--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -103,21 +103,43 @@ body {
     width: 100%;
     justify-content: center; }
     .app .list-wrapper .movie-item {
-      flex-basis: calc(20% - 20px);
-      background-size: 100%;
-      background-repeat: no-repeat;
-      background-position: center;
-      height: 300px;
       margin: 10px 10px;
       transition: all 0.5s ease;
       position: relative;
-      z-index: 0; }
+      z-index: 0;
+      flex-basis: calc(20% - 20px); }
+      .app .list-wrapper .movie-item img {
+        max-width: 100%; }
       .app .list-wrapper .movie-item:hover {
         transform: scale(1.3);
         z-index: 1; }
         .app .list-wrapper .movie-item:hover .content-wrapper {
           opacity: 1;
           border: 1px solid white; }
+        .app .list-wrapper .movie-item:hover .cta-wrapper {
+          display: block;
+          width: 100%;
+          height: 100%;
+          background-color: rgba(0, 0, 0, 0.4);
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          position: absolute;
+          top: 0;
+          right: 0; }
+          .app .list-wrapper .movie-item:hover .cta-wrapper button {
+            background-color: rgba(245, 198, 70, 0.7);
+            color: black;
+            border: none;
+            border-radius: 4px;
+            padding: 8px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: ease 0.2s; }
+            .app .list-wrapper .movie-item:hover .cta-wrapper button:hover {
+              background-color: #f5c646; }
+      .app .list-wrapper .movie-item .cta-wrapper {
+        display: none; }
       .app .list-wrapper .movie-item .content-wrapper {
         opacity: 0.5;
         height: 50px;
@@ -131,3 +153,25 @@ body {
         font-size: 12px;
         box-shadow: 10px 0px 10px rgba(0, 0, 0, 0.5);
         font-weight: lighter; }
+  @media (max-width: 400px) {
+    .app .header {
+      flex-direction: column; }
+      .app .header .navigation {
+        width: 100%; }
+        .app .header .navigation ul {
+          display: flex;
+          align-items: center;
+          width: 100%; }
+        .app .header .navigation li {
+          width: auto !important;
+          text-align: center;
+          flex-basis: 50%;
+          transition-duration: 0.2s !important; }
+      .app .header .form-wrapper form {
+        flex-direction: column; }
+        .app .header .form-wrapper form > div {
+          margin-bottom: 20px; }
+    .app .movie-search {
+      max-width: none; }
+    .app .list-wrapper .movie-item {
+      flex-basis: calc(50% - 20px) !important; } }
