--- a/assets/stylesheets/index.scss
+++ b/assets/stylesheets/index.scss
@@ -20,6 +20,9 @@ body{
     background-color: black;
     font-weight: lighter;
 }
+button:disabled{
+    cursor: default !important;
+}
 .app{
     padding-top: 20px;
     padding-bottom: 50px;
