--- a/assets/stylesheets/index.scss
+++ b/assets/stylesheets/index.scss
@@ -200,7 +200,7 @@ button:disabled{
     }
 
 
-    @media (max-width:400px){
+    @media (max-width:768px){
         .header{
             flex-direction: column;
 
@@ -219,10 +219,18 @@ button:disabled{
                 }
             }
             .form-wrapper{
+                width: 100%;
                 form{
                     flex-direction: column;
+                    align-items: inherit;
+                    width: 100%;
+                    .sort-input-wrapper{
+                        text-align: center;
+                    }
+                    
                     > div{
                         margin-bottom: 20px;
+                        flex-basis: 100%;
                     }
                 }
             }
@@ -234,6 +242,7 @@ button:disabled{
         .list-wrapper{
                 .movie-item{
                     flex-basis: calc(50% - 20px) !important;
+                    text-align: center;
                 }
             }
     }
