--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -156,7 +156,7 @@ button:disabled {
         font-size: 12px;
         box-shadow: 10px 0px 10px rgba(0, 0, 0, 0.5);
         font-weight: lighter; }
-  @media (max-width: 400px) {
+  @media (max-width: 768px) {
     .app .header {
       flex-direction: column; }
       .app .header .navigation {
@@ -170,11 +170,19 @@ button:disabled {
           text-align: center;
           flex-basis: 50%;
           transition-duration: 0.2s !important; }
-      .app .header .form-wrapper form {
-        flex-direction: column; }
-        .app .header .form-wrapper form > div {
-          margin-bottom: 20px; }
+      .app .header .form-wrapper {
+        width: 100%; }
+        .app .header .form-wrapper form {
+          flex-direction: column;
+          align-items: inherit;
+          width: 100%; }
+          .app .header .form-wrapper form .sort-input-wrapper {
+            text-align: center; }
+          .app .header .form-wrapper form > div {
+            margin-bottom: 20px;
+            flex-basis: 100%; }
     .app .movie-search {
       max-width: none; }
     .app .list-wrapper .movie-item {
-      flex-basis: calc(50% - 20px) !important; } }
+      flex-basis: calc(50% - 20px) !important;
+      text-align: center; } }
